WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159078
Media elements should not lose playback controls when muted by a user gesture
https://bugs.webkit.org/show_bug.cgi?id=159078
Summary
Media elements should not lose playback controls when muted by a user gesture
Jer Noble
Reported
2016-06-23 17:56:14 PDT
Media elements should not lose playback controls when muted by a user gesture
Attachments
Patch
(3.02 KB, patch)
2016-06-23 18:00 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(3.02 KB, patch)
2016-06-24 15:12 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-06-23 17:59:19 PDT
<
rdar://problem/26925904
>
Jer Noble
Comment 2
2016-06-23 18:00:22 PDT
Created
attachment 281949
[details]
Patch
Jon Lee
Comment 3
2016-06-24 00:56:37 PDT
Comment on
attachment 281949
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281949&action=review
> Source/WebCore/html/MediaElementSession.cpp:239 > + }
Is it ok to return true even if any of the conditions below in the "if (m_element.isVideo())" block would otherwise return false? Should both these checks happen after that block?
Jer Noble
Comment 4
2016-06-24 09:58:18 PDT
Comment on
attachment 281949
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281949&action=review
>> Source/WebCore/html/MediaElementSession.cpp:239 >> + } > > Is it ok to return true even if any of the conditions below in the "if (m_element.isVideo())" block would otherwise return false? Should both these checks happen after that block?
We don't want to do the size check if we already have had a user gesture, which is why this was moved before. The only case that changes here is that videos which are not in the DOM but are playing due to a user gesture will now show up in the DFR. So in that sense, it's the same as a playing <audio> element, and I think that's fine.
Jer Noble
Comment 5
2016-06-24 15:12:57 PDT
Created
attachment 282018
[details]
Patch
WebKit Commit Bot
Comment 6
2016-06-24 16:01:24 PDT
Comment on
attachment 282018
[details]
Patch Clearing flags on attachment: 282018 Committed
r202459
: <
http://trac.webkit.org/changeset/202459
>
WebKit Commit Bot
Comment 7
2016-06-24 16:01:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug