Media elements should not lose playback controls when muted by a user gesture https://bugs.webkit.org/show_bug.cgi?id=159078 <rdar://problem/26925904>

Reviewed by Beth Dakin.

Rearrange canControlControlsManager() so that the muted check only occurs if
a user gesture is required.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::canControlControlsManager):


Canonical link: https://commits.webkit.org/177215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202459 268f45cc-cd09-0410-ab3c-d52691b4dbfc